Dropbox service needs to use forking, PIDFile and allow SIGKILL(return code 9) without rebooting
Finally in order for it to restart properly it needs to remove the PIDFile after it has stopped (since dropbox don't)

--- a/dropbox.service
+++ b/dropbox.service
@@ -2,10 +2,12 @@
 Description=Dropbox
 
 [Service]
-Type=simple
+Type=forking
+PIDFile=/home/%I/.dropbox/dropbox.pid
 ExecStart=/usr/bin/dropbox
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
+ExecStopPost=/bin/rm /home/%I/.dropbox/dropbox.pid
+ExecReload=/bin/kill -HUP /home/%I/.dropbox/dropbox.pid
+SuccessExitStatus=9 SIGKILL
 Restart=on-failure
 
 [Install]
