--- a/dropbox@.service
+++ b/dropbox@.service
@@ -3,10 +3,12 @@ Description=Dropbox
 After=local-fs.target network.target
 
 [Service]
-Type=simple
+Type=forking
+PIDFile=/home/%I/.dropbox/dropbox.pid
 ExecStart=/usr/bin/dropbox
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
+ExecStopPost=/bin/rm /home/%I/.dropbox/dropbox.pid
+ExecReload=/bin/kill -HUP /home/%I/.dropbox/dropbox.pid
+SuccessExitStatus=9 SIGKILL
 Restart=on-failure
 User=%I
 
